<resources>
    <string name="app_name">Gamer Inside</string>
    <string name="title_activity_game_detail">GameDetailActivity</string>


    <string name="menu_item_search">Search</string>
    <string name="menu_item_news">News</string>
    <string name="menu_item_discover_games">Discover</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="news_detail_goto_button">Read Article</string>
    <string name="news_detail_author_prefix">by &#160;</string>
    <string name="news_detail_created_date_prefix">on &#160;</string>


    <string name="discover_game_popular_games">Popular Now</string>
    <string name="discover_game_most_anticipated">Most Anticipated</string>
    <string name="discover_game_coming_soon">Coming Soon</string>

    <string name="game_detail_summary_label">Summary</string>
    <string name="game_detail_storyline_label">Storyline</string>
    <string name="game_detail_gamers_rating">Gamers Rating</string>
    <string name="game_detail_critics_rating_label">Critics Rating</string>
    <string name="game_detail_developers_label">Developer(s):</string>
    <string name="game_detail_platforms_label">Available On:</string>
    <string name="game_detail_release_date">Release Date:</string>
    <string name="game_detail_image_gallery_label">Image Gallery</string>
    <string name="game_detail_video_gallery_label">Video Gallery</string>

    <string name="hint_search_game_fragment">Search for a game</string>
</resources>
