<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/recyclerview_view_horizontal_margin"
    android:layout_marginRight="@dimen/recyclerview_view_horizontal_margin"
    tools:context=".discover.DiscoverGamesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_game_popular_games" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/popular_games_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_game_most_anticipated" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/most_anticipated_games_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_game_coming_soon" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/upcoming_games_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
