<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="com.raju.joel.gamerinside.gamedetail.GameDetailFragment">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                    <ImageView
                        android:id="@+id/game_header_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:layout_collapseMode="none" />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/game_detail_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
                </android.support.design.widget.CollapsingToolbarLayout>


            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/base_vertical_margin"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/game_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:layout_marginTop="@dimen/game_detail_vertical_margin"
                        android:fontFamily="@font/opensans_bold"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/game_detail_game_title_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/game_detail_release_date"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/game_detail_label_size" />

                        <TextView
                            android:id="@+id/game_release_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/game_detail_label_horizonal_margin"
                            android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                            android:layout_marginRight="@dimen/content_horizontal_margin"
                            android:fontFamily="@font/opensans_regular"
                            android:textColor="@android:color/black" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/game_detail_platforms_label"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/game_detail_label_size" />

                        <TextView
                            android:id="@+id/game_platforms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/game_detail_label_horizonal_margin"
                            android:layout_marginStart="@dimen/game_detail_label_horizonal_margin"
                            android:fontFamily="@font/opensans_regular"
                            android:textColor="@android:color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/game_rating_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:layout_marginTop="@dimen/game_detail_individual_content_vertical_margin"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                                android:gravity="center_horizontal">

                                <ProgressBar
                                    android:id="@+id/game_gamer_rating"
                                    style="?android:attr/progressBarStyleHorizontal"
                                    android:layout_width="@dimen/game_detail_game_rating_progress_width"
                                    android:layout_height="@dimen/game_detail_game_rating_progress_height"
                                    android:gravity="center"
                                    android:indeterminate="false"
                                    android:max="100"
                                    android:progressDrawable="@drawable/circular_progress" />

                                <TextView
                                    android:id="@+id/game_gamer_rating_value"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBottom="@id/game_gamer_rating"
                                    android:layout_alignEnd="@id/game_gamer_rating"
                                    android:layout_alignLeft="@id/game_gamer_rating"
                                    android:layout_alignRight="@id/game_gamer_rating"
                                    android:layout_alignStart="@id/game_gamer_rating"
                                    android:layout_alignTop="@id/game_gamer_rating"
                                    android:fontFamily="@font/opensans_semibold"
                                    android:gravity="center"
                                    android:textColor="@android:color/black" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensans_semibold"
                                android:text="@string/game_detail_gamers_rating"
                                android:textAlignment="center"
                                android:textColor="@android:color/black" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                                android:layout_weight="0.5"
                                android:gravity="center_horizontal">


                                <ProgressBar
                                    android:id="@+id/game_critic_rating"
                                    style="?android:attr/progressBarStyleHorizontal"
                                    android:layout_width="@dimen/game_detail_game_rating_progress_width"
                                    android:layout_height="@dimen/game_detail_game_rating_progress_height"
                                    android:gravity="center"
                                    android:indeterminate="false"
                                    android:max="100"
                                    android:progressDrawable="@drawable/circular_progress" />

                                <TextView
                                    android:id="@+id/game_critic_rating_value"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignBottom="@id/game_critic_rating"
                                    android:layout_alignEnd="@id/game_critic_rating"
                                    android:layout_alignLeft="@id/game_critic_rating"
                                    android:layout_alignRight="@id/game_critic_rating"
                                    android:layout_alignStart="@id/game_critic_rating"
                                    android:layout_alignTop="@id/game_critic_rating"
                                    android:fontFamily="@font/opensans_semibold"
                                    android:gravity="center"
                                    android:textColor="@android:color/black" />


                            </RelativeLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensans_semibold"
                                android:text="@string/game_detail_critics_rating_label"
                                android:textAlignment="center"
                                android:textColor="@android:color/black" />

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/game_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:layout_marginTop="@dimen/game_detail_individual_content_vertical_margin"
                        android:fontFamily="@font/librebaskerville_regular"
                        android:lineSpacingExtra="@dimen/content_line_spacing"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:id="@+id/game_storyline_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:layout_marginTop="@dimen/game_detail_individual_content_vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/game_storyline_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/game_detail_storyline_label"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/game_detail_label_size" />

                        <TextView
                            android:id="@+id/game_storyline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                            android:layout_marginTop="@dimen/game_detail_individual_content_vertical_margin"
                            android:fontFamily="@font/librebaskerville_regular"
                            android:lineSpacingExtra="@dimen/content_line_spacing"
                            android:textColor="@android:color/black" />
                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:fontFamily="@font/opensans_semibold"
                        android:text="@string/game_detail_image_gallery_label"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/game_detail_label_size" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/game_image_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/recyclerview_view_horizontal_margin"
                        android:layout_marginRight="@dimen/recyclerview_view_horizontal_margin"
                        android:clipToPadding="false" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/content_horizontal_margin"
                        android:layout_marginRight="@dimen/content_horizontal_margin"
                        android:fontFamily="@font/opensans_semibold"
                        android:text="@string/game_detail_video_gallery_label"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/game_detail_label_size" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/game_video_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/game_detail_individual_content_vertical_margin"
                        android:layout_marginLeft="@dimen/recyclerview_view_horizontal_margin"
                        android:layout_marginRight="@dimen/recyclerview_view_horizontal_margin"
                        android:clipToPadding="false" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_loading_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp" />
    </RelativeLayout>

</RelativeLayout>
